# LightWSI

./: CMakeLists.txt  LightWSI.h  README.md  lwsipch.h
Layer/: Device.cpp  Device.h  DispatcheTable.h  Handle.h  Instance.cpp  Instance.h  Layer.cpp  PhysicalDevice.h  Queue.cpp  Queue.h  Surface.cpp  Surface.h  Swapchain.h  VkLayer_LightWSI_window_system_integration.json
WSI/Direct2D/: Direct.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  Sync.h
